--- a/src/Product.css
+++ b/src/Product.css
@@ -8,7 +8,7 @@
   width: 100%;
   max-height: 400px;
   min-width: 100px;
-  background-color: rgb(219, 219, 218);
+  background-color: white;
   z-index: 1;
 }
 
